:see_no_evil: ignore lazy-lock.json, Update Readme